updated image path

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <main>
     <section class="section0">
       <div class="logo">
-        <img src="../img/logo.svg" class="logo_img" />
+        <img src="./img/logo.svg" class="logo_img" />
         <button class="header_button">Try It Free</button>
       </div>
       <div class="hero">
@@ -22,7 +22,7 @@
           <p class="paragraph">Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussin.</p>
           <button class="signup_button">Get Started For Free</button>
         </div>
-        <div><img src="../img/illustration-mockups.svg" class="heroimg" /></div>
+        <div><img src="./img/illustration-mockups.svg" class="heroimg" /></div>
       </div>
     </section>
     <div class="body_spacer"></div>
@@ -30,7 +30,7 @@
 
 
     <section class="section1">
-      <div><img src="../img/illustration-grow-together.svg" class="bodyimg" id="responsive"></div>
+      <div><img src="./img/illustration-grow-together.svg" class="bodyimg" id="responsive"></div>
       <div class="section_writeup">
         <h3 class="section_header">Grow Together</h3>
         <p class="section_paragraph">Generate meaningful discussions with your audience and build a strong, loyal
@@ -38,14 +38,14 @@
           insightful conversations you miss out on with a feedback form.</p>
       </div>
       <div class="section_spacer"></div>
-      <div><img src="../img/illustration-grow-together.svg" class="bodyimg" id="non-responsive"></div>
+      <div><img src="./img/illustration-grow-together.svg" class="bodyimg" id="non-responsive"></div>
     </section>
 
 
 
     <section class="section1">
       <div>
-        <img src="../img/illustration-flowing-conversation.svg" class="bodyimg">
+        <img src="./img/illustration-flowing-conversation.svg" class="bodyimg">
       </div>
       <div class="section_spacer"></div>
       <div class="section_writeup">
